# locus-protocol

./: .gitignore  CLAUDE_IMPLEMENTATION_PROMPT.md  LICENSE  README.md  SECURITY_FINAL.md  SECURITY_FIXES.md  SECURITY_FIX_PLAN.md
.github/workflows/: benchmark.yml  testnet-deployment.yml
benchmarks/: RESULTS.md  package.json
benchmarks/optimizations/: bottlenecks.md  caching-strategy.md  database-indexes.md
benchmarks/query-performance/: spatial-query.js
benchmarks/tx-throughput/: citizen-join.js  city-founding.js  heartbeat-ingestion.js
benchmarks/wasm-runtime/: ghost-execution.js
client/: README.md  package-lock.json  package.json
client/src/: broadcaster.ts  client.ts  constants.ts  index.ts  registry.ts  transaction-builder.ts  types.ts
client/test/: city-manager.test.ts  fibonacci.test.ts  governance-manager.test.ts  stakes.test.ts  territory-manager.test.ts  transaction-builder.test.ts  treasury-manager.test.ts
core/: mix.exs
core/config/: config.exs
ghost/runtime/: .dockerignore  .gitignore  Cargo.lock.placeholder  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  docker-compose.yml
ghost/runtime/sample-wasm/: README.md  greeter.rs  manifest-example.json  merchant.rs  oracle.rs
ghost/runtime/src/: error.rs  main.rs  types.rs
ghost/runtime/src/api/: handlers.rs  mod.rs  server.rs
ghost/runtime/src/host/: mod.rs
ghost/runtime/src/proto/: ghost.proto
ghost/runtime/src/runtime/: config.rs  engine.rs  limits.rs  mod.rs
ghost/runtime/src/state/: machine.rs  mod.rs  types.rs
ghost/runtime/src/storage/: cid_loader.rs  mod.rs
ghost/runtime/tests/: integration_tests.rs  state_machine_test.rs
ghost/runtime/tests/common/: mod.rs
indexer/: .env.example  Dockerfile  docker-compose.yml  openapi.yaml  package-lock.json  package.json
indexer/src/: config.ts  index.ts  server.ts
indexer/test/: city-state.test.ts  handlers.test.ts  parser.test.ts
infrastructure/: README.md
infrastructure/runbooks/: failover.md  incident-response.md  scaling.md
infrastructure/scripts/: backup.sh  deploy-mainnet.sh  restore.sh  rotate-keys.sh
infrastructure/terraform/: README.md
node/: Dockerfile  mix.exs
node/config/: config.exs  runtime.exs
node/lib/: locus.ex
python-sdk/: Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
python-sdk/docs/: API.md
python-sdk/examples/: 01_found_city.py  02_claim_territory.py  03_deploy_ghost.py  04_governance.py  05_treasury_ubi.py  06_full_transaction.py
python-sdk/locus/: __init__.py  broadcaster.py  city.py  client.py  constants.py  governance.py  heartbeat.py  object.py  territory.py  transaction.py  treasury.py  types.py
python-sdk/locus/utils/: __init__.py  fibonacci.py  messagepack.py  stakes.py
python-sdk/tests/: __init__.py  test_city_manager.py  test_client.py  test_constants.py  test_fibonacci.py  test_governance_manager.py  test_heartbeat_manager.py  test_object_manager.py  test_stakes.py  test_territory_manager.py  test_transaction_builder.py  test_treasury_manager.py
security/: AUDIT-2026-03-17.md
security/findings/: FINDING-001.md  FINDING-002.md  FINDING-003.md  FINDING-004.md  FINDING-005.md  FINDING-006.md  FINDING-007.md  FINDING-008.md  FINDING-009.md  FINDING-010.md  FINDING-011.md  FINDING-012.md  FINDING-013.md  FINDING-014.md  FINDING-015.md  FINDING-016.md  FINDING-017.md  FINDING-018.md
security/remediation/: REM-001.md  REM-002.md  REM-003.md  REM-004.md  REM-005.md  REM-006.md  REM-007.md  REM-008.md  REM-009.md  REM-010.md  REM-011.md  REM-012.md  REM-013.md  REM-014.md  REM-015.md  REM-016.md  (+2 more)
specs/: 00-principles.md  01-overview.md  01-territory-hierarchy.md  02-city-lifecycle.md  02-transaction-formats.md  03-ghost-registry.md  03-staking-economics.md  04-governance.md  04-staking-spec.md  05-ghost-protocol.md  05-heartbeat-protocol.md  06-fee-distribution.md  06-heartbeat-presence.md  07-challenge-system.md  07-transaction-formats.md  README.md
testnet/: README.md
(+141 files in other folders)
